unite service logic, add spring validation