@@ -36,13 +36,14 @@ public class ConvertUtils {
 
 
     public static List<GetDrinksResponseIngredient> mapIngredients(Set<DrinkIngredient> ingredients) {
-        return ingredients.stream().map(ingredient -> GetDrinksResponseIngredient.builder()
-                .name(ingredient.getIngredient().getName())
-//                .description(ingredient.getIngredient().getDescription())
-                .isAlcoholic(ingredient.getIngredient().getIsAlcoholic())
-                .abv(ingredient.getIngredient().getAbv())
-                .amount(ingredient.getAmount())
-                .build()).collect(Collectors.toList());
+        return ingredients.stream()
+                .map(ingredient -> GetDrinksResponseIngredient.builder()
+                        .name(ingredient.getIngredient().getName())
+                        .isAlcoholic(ingredient.getIngredient().getIsAlcoholic())
+                        .abv(ingredient.getIngredient().getAbv())
+                        .amount(ingredient.getAmount())
+                        .build())
+                .toList();
     }
 
     public static GetDrinksResponseDrink mapDrinksToResponse(Drink drink) {
@@ -58,6 +59,7 @@ public class ConvertUtils {
 
     public static GetIngredientsResponseIngredient mapIngredientsToResponse(Ingredient ingredient) {
         return GetIngredientsResponseIngredient.builder()
+                .id(ingredient.getId())
                 .name(ingredient.getName())
                 .abv(ingredient.getAbv())
                 .isAlcoholic(ingredient.getIsAlcoholic())
@@ -70,7 +72,7 @@ public class ConvertUtils {
                 .getDrinks()
                 .stream()
                 .map(ConvertUtils::mapDrinksToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return PartyResponse.builder()
                 .id(party.getId())
